--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,8 +17,8 @@ jobs:
       packages: write
       
       steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
@@ -36,8 +36,36 @@ jobs:
 
   test:
   
+    name: Test - Units & Integrations
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: Maven Package
+        run: mvn -B clean package -DskipTests
+      - name: Maven Verify
+        run: mvn -B clean verify -Pintegration-test
+  
   lint:
   
+   name: Test - SonarCloud Scan
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: SonarCloud Scan
+        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
   
   release:
   
