--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 11.0.4
+          java-version: '11'
+          distribution: 'adopt'
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
@@ -50,7 +51,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 11.0.4
+          java-version: '11'
+          distribution: 'adopt'
       - name: SonarCloud Scan
         run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
