--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - 'main'
-
+env:
+  AWS_REGION: us-west-1
+  ECR_REPOSITORY: MY_ECR_REPOSITORY
+  
 jobs:
 
   build:
@@ -73,7 +76,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ .env.AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
       - name: Login to Amazon ECR 
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
