--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag  my-java-app:$(date +%s)
+      run: sudo docker build . --file Dockerfile --tag  my-java-app:$(date +%s)
