--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: sudo docker build . --file Dockerfile --tag  my-java-app:$(date +%s)
+    - name: Build and run Docker container
+      run: |
+       sudo  docker build -t my-java-app1 .
+       sudo docker run -d -p 8080:8080 my-java-app1
+
